2012-04-03  Adam Barth  <abarth@webkit.org>

        Unreviewed. This patch adds an ugly, ugly hack to bandaid over the
        Windows component build. See comments in the code for details.

        * chromium/public/WebMediaStreamSourcesRequest.h:
        (WebMediaStreamSourcesRequest):

2012-04-02  Zhenyao Mo  <zmo@google.com>

        Implement WebGLShaderPrecisionFormat
        https://bugs.webkit.org/show_bug.cgi?id=75925

        Reviewed by Kenneth Russell.

        * chromium/public/WebGraphicsContext3D.h: Add getShaderPrecisionFormat().
        (WebGraphicsContext3D):

2012-04-03  Adam Barth  <abarth@webkit.org>

        Attempt to fix the Windows component build by including these headers
        rather than forward declaring these objects.

        * chromium/public/WebMediaStreamSourcesRequest.h:
        (WebKit):

2012-04-02  Adam Barth  <abarth@webkit.org>

        [Chromium] Move a number of virtual functions from WebKitPlatformSupport.h into Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=82865

        Reviewed by Kent Tamura.

        Moving these functions into Platform.h allows them to be called from
        Platform (aka WebCore/platform), as discussed in 
        https://lists.webkit.org/pipermail/webkit-dev/2012-March/020166.html

        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        (WebKit::Platform::mimeRegistry):
        (WebKit::Platform::audioHardwareSampleRate):
        (WebKit::Platform::audioHardwareBufferSize):
        (WebKit::Platform::createAudioDevice):
        (WebKit::Platform::sampleGamepads):
        (WebKit::Platform::visitedLinkHash):
        (WebKit::Platform::isLinkVisited):
        (WebKit::Platform::signedPublicKeyAndChallengeString):
        (WebKit::Platform::memoryUsageMB):
        (WebKit::Platform::actualMemoryUsageMB):
        (WebKit::Platform::lowMemoryUsageMB):
        (WebKit::Platform::highMemoryUsageMB):
        (WebKit::Platform::highUsageDeltaMB):